increased contact page height, added tabbed widget to reg

--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
 
         <!--End Main Header -->
 
-        <section class="services-style-one">
+        <section class="services-style-one" style="min-height:65vh;">
             <div class="container">
                 <div class="sec-title text-left">
                     <h2>Contacts</h2><br><br>
