--- a/index.html
+++ b/index.html
@@ -433,12 +433,13 @@
     <!-- Contact Map Section -->
     <section class="services-style-one">
         <div class="container">
-            <div class="sec-title text-left">
+            <div class="sec-title text-center">
                 <h2>Sponsors & Exhibitors</h2><br>
                 <center>
                     <div class="container">
                             <div class="row"><br><br>
-                                    <h3>ORGANISED BY</h3>
+                                <div class="sec-title text-center">
+                                    <h4>ORGANISED BY</h4></div>
                                     <div class="col-md-4" style="padding-top:50px;">
                                         <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks"
                                             style="height: 50px;">
