--- a/kerala.html
+++ b/kerala.html
@@ -142,7 +142,7 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li>
+                                     <!-- <li><a href="index.html">Home</a></li> -->
                                      <li class="current dropdown"><a href="about.html">About</a>
                                          <ul>
                                              <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
