--- a/venue.html
+++ b/venue.html
@@ -147,7 +147,7 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li><a href="index.html">Home</a></li>
+                                    <!-- <li><a href="index.html">Home</a></li> -->
 
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
