--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
-                                <div class="content">
+                                <div class="content text-center">
                                     <div class="main-banner-content-two">
-                                        <h3 class="title" data-animation="animated fadeInUp">17th - 20th October</h3>
-                                        <h1 data-animation="animated fadeInDown">TENCON <br> 2019</h1>
-                                        <p class="text" data-animation="animated fadeInDown">Hotel Grand Hyatt Kochi</p>
+                                        <h3 class="title" data-animation="animated fadeInUp">17th - 20th October | Hotel Grand Hyatt Kochi</h3>
+                                        <h1 data-animation="animated fadeInDown">TENCON 2019</h1>
+                                        <p class="text" data-animation="animated fadeInDown">Technology, Knowledge and Society</p>
                                         <!-- <a href="#" data-animation="animated fadeInUp"
                                             class="theme-btn btn-style-one">Read More</a>
                                         <a href="#" data-animation="animated fadeInUp" class="link"><i
@@ -267,9 +267,8 @@
                                 <div class="content ">
                                     <div class="main-banner-content-two">
                                         <h3 class="title" data-animation="animated fadeInUp">A premier Technology
-                                            conference in IEEE R10</h3>
-                                        <h1 data-animation="animated fadeInDown">Technology,<br> Knowledge and<br>
-                                            Society</h1>
+                                            conference of IEEE R10 in</h3>
+                                        <h1 data-animation="animated fadeInDown">God's own country</h1>
                                         <!-- <p data-animation="animated fadeInDown" class="text">We are one of leading
                                             company in manufacturing and <br> chemical products makes investments.</p>
                                         <a data-animation="animated fadeInUp" href="#"
@@ -334,7 +333,7 @@
                     <div class="info-column col-md-8 col-sm-12 col-xs-12 col-lg-pull-4" style="padding: 30px;">
                         <div class="sec-title">
 
-                            <h2 style="text-decoration-color:yellow">Welcome to TENCON 2019 Website!</h2>
+                            <h2 style="text-decoration-color:yellow">Technology, Knowledge & Society</h2>
                         </div>
                         <div class="about-company">
                             <h4>A premier international technical conference of IEEE Region 10</h4>
