--- a/visa.html
+++ b/visa.html
@@ -35,6 +35,27 @@
              border-right: 1px solid #ddd;
              border-left: 1px solid #ddd;
          }
+
+         h3 {
+             color: #822468;
+         }
+
+         font {
+             font-weight: 600;
+         }
+
+         .btn {
+             background-color: #ffffff;
+             color: #822468;
+             font-weight: 800;
+             border: #822468 solid 1px;
+         }
+
+         .btn:hover {
+             background-color: #ffda15;
+             /* transition: background-color 0.8s; */
+             border: none;
+         }
      </style>
 
      <!--Favicon-->
@@ -223,7 +244,7 @@
                      <h2>Visa Information</h2><br>
 
                      <p>
-                         <font color="red">ALL FOREIGN ATTENDEES ARE REQUIRED TO APPLY FOR A CONFERENCE VISA</font>
+                         <font color="#ffda15">ALL FOREIGN ATTENDEES ARE REQUIRED TO APPLY FOR A CONFERENCE VISA</font>
 
                          <h3>Requirements for Visa Application for All Applicants:</h3>
                          <p>Generally the following documents are required for obtaining Indian Visa. However, the
