--- a/visa.html
+++ b/visa.html
@@ -52,9 +52,11 @@
          }
 
          .btn:hover {
-             background-color: #ffda15;
-             /* transition: background-color 0.8s; */
-             border: none;
+             background-color: #ffffff;
+             color: #822468;
+             box-shadow: 1.5px 1.5px 2px #822468;
+             transition: box-shadow 0.6s;
+             border: #822468 solid 1px;
          }
      </style>
 
