--- a/itrack.html
+++ b/itrack.html
@@ -22,8 +22,9 @@
   </style>
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+
   <!-- Responsive -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -89,13 +90,14 @@
                     </ul>
                   </li>
                   <li><a href="speakers.html">Speakers</a></li>
-                  <li><a href="#">Program</a>
+                  <li class="dropdown"><a href="#">Program</a>
                     <ul>
                       <li><a href="overview.html">Overview </a></li>
                       <li><a href="detailed_program.html">Detailed Program</a></li>
                       <li><a href="special_sessions.html">Special Sessions</a></li>
                       <li><a href="workshops.html">Workshops</a></li>
                       <li><a href="tutorial.html">Tutorials</a></li>
+
                       <li><a href="social.html">Social Program/Tour</a></li>
 
                     </ul>
@@ -167,13 +169,14 @@
                     </ul>
                   </li>
                   <li><a href="speakers.html">Speakers</a></li>
-                  <li><a href="#">Program</a>
+                  <li class="dropdown"><a href="#">Program</a>
                     <ul>
                       <li><a href="overview.html">Overview </a></li>
                       <li><a href="detailed_program.html">Detailed Program</a></li>
                       <li><a href="special_sessions.html">Special Sessions</a></li>
                       <li><a href="workshops.html">Workshops</a></li>
                       <li><a href="tutorial.html">Tutorials</a></li>
+
                       <li><a href="social.html">Social Program/Tour</a></li>
 
                     </ul>
@@ -205,92 +208,106 @@
         <div class="sec-title text-left">
 
           <h2>Special Industrial Track (SIT)</h2><br>
+        </div>
 
-          <p align="justify">IEEE TENCON 2019 provides an extra platform for students, young professionals, and experts
-            from academia and Industries as well as
-            start-ups to interact brainstorm to leverage mutual benefits. This one day event being held on <font
-              color="red">19th October</font> is open to all registered attendees of TENCON
-            2019 free of cost. It is also possible to separately register and attend this track. Industries and
-            Start-ups interested to participate are requested to
-            contact any of the organizers given below:<br><br>
+        <div class="row">
+          <div class="col-md-10">
+            <p align="justify">IEEE TENCON 2019 provides an extra platform for students, young professionals, and
+              experts
+              from academia and Industries as well as
+              start-ups to interact brainstorm to leverage mutual benefits. This one day event being held on <font
+                color="red">19th October</font> is open to all registered attendees of TENCON
+              2019 free of cost. It is also possible to separately register and attend this track. Industries and
+              Start-ups interested to participate are requested to
+              contact any of the organizers given below:<br><br>
 
-            <h3>Organisers:</h3><br>
-            <div class="why-us-tabs tabs-box" style="background:#f1f1ed;padding:12px;">
+              <h3>Organisers:</h3><br>
+              <div class="why-us-tabs tabs-box" style="background:#f1f1ed;padding:12px;">
                 <div class="row clearfix">
-                    <div class="column col-lg-4 col-md-12 col-sm-4 col-xs-12">
-                        <ul class="tab-buttons">
-                            <li data-tab="#tab-1" class="tab-btn">IEEE Region 10</li>
-                            <li data-tab="#tab-2" class="tab-btn active-btn">IEEE Kerala Section</li>
-                            <li data-tab="#tab-3" class="tab-btn">Who should attend?</li>
+                  <div class="column col-lg-4 col-md-12 col-sm-4 col-xs-12">
+                    <ul class="tab-buttons">
+                      <li data-tab="#tab-1" class="tab-btn">IEEE Region 10</li>
+                      <li data-tab="#tab-2" class="tab-btn active-btn">IEEE Kerala Section</li>
+                      <li data-tab="#tab-3" class="tab-btn">Who should attend?</li>
+                    </ul>
+                  </div>
+                  <div class="column col-lg-8 col-md-12 col-sm-8 col-xs-12">
+                    <div class="tabs-content">
+                      <!--Tab / Active Tab-->
+                      <div class="tab" id="tab-1" style="display: none;">
+                        <ul>
+                          <li><b>Chris GwoGiun Lee</b>, <i>National Cheng Kung
+                              University, Taiwan</i> <a class="url"
+                              href="mailto:clee@mail.ncku.edu.tw">(clee@mail.ncku.edu.tw)</a></li>
+                          <li><b>Takako Hashimoto</b>, <i>Chiba University of
+                              Commerce, Japan</i><a class="url" href="mailto:takako@cuc.ac.jp"> (takako@cuc.ac.jp)</a>
+                          </li>
+                          <li><b>Amit Kumar</b>, <i>BioAxis DNA Research Centre
+                              (P) Ltd, India</i><a class="url" href="mailto:amitkr@ieee.org"> (amitkr@ieee.org)</a></li>
                         </ul>
+
+                      </div>
+
+                      <!--Tab-->
+                      <div class="tab active-tab" id="tab-2" style="display: block;">
+                        <ul>
+                          <li><b>Amarnath Raja</b>, <i>Past Chair, Kerala
+                              Section,</i> <a class="url" href="mailto:a.raja@ieee.org">(a.raja@ieee.org)</a></li>
+                          <li><b>MC Jayakrishnan</b>, <i>Professional Activities
+                              Chair, Kerala Section, </i> <a class="url"
+                              href="mailto:mcjayan@ieee.org">(mcjayan@ieee.org)</a></li>
+                        </ul>
+                      </div>
+
+                      <!--Tab-->
+                      <div class="tab" id="tab-3" style="display: none;">
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Technologists
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Entrepreneurs
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Start-ups
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Women in technology
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Founders & CEO
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Industries
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Academicians and Researchers
+                        <br>
+                        <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Students
+
+                      </div>
                     </div>
-                    <div class="column col-lg-8 col-md-12 col-sm-8 col-xs-12">
-                        <div class="tabs-content">
-                            <!--Tab / Active Tab-->
-                            <div class="tab" id="tab-1" style="display: none;">
-                              <ul>
-                                <li><b>Chris GwoGiun Lee</b>, <i>National Cheng Kung
-                                    University, Taiwan</i> <a class="url" href="mailto:clee@mail.ncku.edu.tw">(clee@mail.ncku.edu.tw)</a></li>
-                                    <li><b>Takako Hashimoto</b>, <i>Chiba University of
-                                        Commerce, Japan</i><a class="url" href="mailto:takako@cuc.ac.jp"> (takako@cuc.ac.jp)</a></li>
-                                        <li><b>Amit Kumar</b>, <i>BioAxis DNA Research Centre
-                                            (P) Ltd, India</i><a class="url" href="mailto:amitkr@ieee.org"> (amitkr@ieee.org)</a></li>
-                              </ul>
-   
-                            </div>
-
-                            <!--Tab-->
-                            <div class="tab active-tab" id="tab-2" style="display: block;">
-                              <ul>
-                                <li><b>Amarnath Raja</b>, <i>Past Chair, Kerala
-                                    Section,</i> <a class="url" href="mailto:a.raja@ieee.org">(a.raja@ieee.org)</a></li>
-                              <li><b>MC Jayakrishnan</b>, <i>Professional Activities
-                                  Chair, Kerala Section, </i> <a class="url" href="mailto:mcjayan@ieee.org">(mcjayan@ieee.org)</a></li>
-                                  </ul>                                
-                            </div>
-
-                            <!--Tab-->
-                            <div class="tab" id="tab-3" style="display: none;">
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Technologists
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Entrepreneurs
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Start-ups
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Women in technology
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Founders & CEO
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Industries
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Academicians and Researchers
-                                <br>
-                                <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Students
-                             
-                            </div>
-                        </div>
-                    </div>
+                  </div>
                 </div>
-         </div>
-           
-         <div class="container">
-           <div class="row">
-             <div class="col-md-6" style="border-right: 1px solid gray;"><p>IEEE Region 10 Industry Relations Committee provides Student Travel Fund for attending the Industry track
-                of prestigious conferences of R10.
-                Applications must reach the concerned officers by <font color="red">15th June </font>. See the document
-                given here for more details.</p></div>
-                <div class="col-md-6">
-                    <p><a class="url" href="industry-track.pdf" target="_blank">Know More About SIT</a></p><br>
-                      <a class="url" href="IRCStudent-funding-application-guideline.pdf" target="_blank">Student Travel Fund for
-                          attending the Industry Track</a>
 
-                </div>
-           </div>
-         </div>
+              </div>
+          </div>
 
-         <div class="sec-title text-center"><br><br><h2>PROGRAMME OVERVIEW</h3></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6" style="border-right: 1px solid gray;">
+            <p>IEEE Region 10 Industry Relations Committee provides Student Travel Fund for attending the Industry track
+              of prestigious conferences of R10.
+              Applications must reach the concerned officers by <font color="red">15th June </font>. See the document
+              given here for more details.</p>
+          </div>
+          <div class="col-md-6">
+            <p><a class="url" href="industry-track.pdf" target="_blank">Know More About SIT</a></p><br>
+            <a class="url" href="IRCStudent-funding-application-guideline.pdf" target="_blank">Student Travel Fund for
+              attending the Industry Track</a>
 
+          </div>
+        </div><br>
+        <hr>
 
+        <div class="sec-title text-left"><br><br>
+          <h2>PROGRAMME OVERVIEW</h3>
+        </div>
+
+        <div class="row">
+          <div class="col-md-10">
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
                 <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
@@ -364,9 +381,9 @@
               </tr>
 
               <!--   <tr>
-   <td width="16%" bgcolor="#FFFFFF">TBA</td><td width="16%" bgcolor="#FFFFFF"><b>09:45 to 10:30</b></td>
-   <td width="79%" bgcolor="#FFFFFF">Entrepreneurship and Startups</td>
- </tr> -->
+           <td width="16%" bgcolor="#FFFFFF">TBA</td><td width="16%" bgcolor="#FFFFFF"><b>09:45 to 10:30</b></td>
+           <td width="79%" bgcolor="#FFFFFF">Entrepreneurship and Startups</td>
+         </tr> -->
 
               <tr>
                 <td width="16%" bgcolor="#b4b4b4"></td>
@@ -449,9 +466,9 @@
               </tr>
 
               <!--   <tr>
-   <td width="16%" bgcolor="#F6CEF5"><b>TBD</b></td><td width="16%" bgcolor="#F6CEF5"><b>17:15 to 18:00</b></td>
-   <td width="79%" bgcolor="#F6CEF5"><a class="url" href="#"><b>Women in Industry and Startups</b></a><br></td>
- </tr> -->
+           <td width="16%" bgcolor="#F6CEF5"><b>TBD</b></td><td width="16%" bgcolor="#F6CEF5"><b>17:15 to 18:00</b></td>
+           <td width="79%" bgcolor="#F6CEF5"><a class="url" href="#"><b>Women in Industry and Startups</b></a><br></td>
+         </tr> -->
 
             </table>
 
@@ -565,56 +582,62 @@
               </tr>
 
             </table>
+          </div>
+        </div><br>
+        <hr>
+        <div class="row">
+          <div class="col-md-10">
+            <h3>Industry Track Registration Fee for Individuals and Companies</h3><br>
+            <table border="2" width="100%" cellspacing="2">
+              <tr>
+                <td bgcolor="#F6CEF5"><b>Category</b></td>
+                <td colspan="2" bgcolor="#F6CEF5"><b>Indian(INR)</b></td>
+                <td colspan="2" bgcolor="#F6CEF5"><b>Foreign(USD)</b></td>
+              </tr>
 
+              <tr bgcolor="#fde8fb">
+                <td><b>Individual- Student/Professional</b></td>
+                <td>5000</td>
+                <td></td>
+                <td>100</td>
+              </tr>
+
+              <tr bgcolor="#fde8fb">
+                <td><b>Individual- Student/Professional IEEE Member</b></td>
+                <td>4000</td>
+                <td></td>
+                <td>75</td>
+              </tr>
+
+              <tr bgcolor="#fde8fb">
+                <td><b>Start-up/MSME</b></td>
+                <td>17500</td>
+                <td></td>
+                <td>250</td>
+              </tr>
+              <tr bgcolor="#fde8fb">
+                <td><b>Other industries</b></td>
+                <td>35000</td>
+                <td></td>
+                <td>750</td>
+              </tr>
+            </table><br>
+            <p>The rates given above are inclusive of 18% GST and 1% Flood cess but exclusive of the payment gateway
+              charge
+              of 3.25%.<br>
+              This one day registration is applicable only for attending participating in the Special Industry Track of
+              TENCON 2019 scheduled to be held on Saturday, 19th October</p><br>
+
+
+            <center>
+              <a href="https://in.explara.com/widget-new/tencon-2019" class="theme-btn btn-style-one">Register for
+                Special Industry Track (SIT)</a>
+
+            </center>
+            <br>
+          </div>
         </div>
-        <h3>Industry Track Registration Fee for Individuals and Companies</h3><br>
-        <table border="2" width="100%" cellspacing="2">
-          <tr>
-            <td bgcolor="#F6CEF5"><b>Category</b></td>
-            <td colspan="2" bgcolor="#F6CEF5"><b>Indian(INR)</b></td>
-            <td colspan="2" bgcolor="#F6CEF5"><b>Foreign(USD)</b></td>
-          </tr>
 
-          <tr bgcolor="#fde8fb">
-            <td><b>Individual- Student/Professional</b></td>
-            <td>5000</td>
-            <td></td>
-            <td>100</td>
-          </tr>
-
-          <tr bgcolor="#fde8fb">
-            <td><b>Individual- Student/Professional IEEE Member</b></td>
-            <td>4000</td>
-            <td></td>
-            <td>75</td>
-          </tr>
-
-          <tr bgcolor="#fde8fb">
-            <td><b>Start-up/MSME</b></td>
-            <td>17500</td>
-            <td></td>
-            <td>250</td>
-          </tr>
-          <tr bgcolor="#fde8fb">
-            <td><b>Other industries</b></td>
-            <td>35000</td>
-            <td></td>
-            <td>750</td>
-          </tr>
-        </table><br>
-        <p>The rates given above are inclusive of 18% GST and 1% Flood cess but exclusive of the payment gateway charge
-          of 3.25%.<br>
-          This one day registration is applicable only for attending participating in the Special Industry Track of
-          TENCON 2019 scheduled to be held on Saturday, 19th October</p><br>
-
-
-        <center>
-          <h3>
-            <font color="blue"><a class="url" href="https://in.explara.com/widget-new/tencon-2019"> > > > > > Click here
-                to Register for Special Industry Track (SIT)</a></font>
-          </h3>
-        </center>
-        <br>
     </section>
 
 
