--- a/reg.html
+++ b/reg.html
@@ -140,7 +140,7 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li><a href="index.html">Home</a></li>
+                                    <!-- <li><a href="index.html">Home</a></li> -->
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
                                             <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
